--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:title" content="UVA 2048 "/>
   <meta property="og:site_name" content="UVA 2048 "/>
   <meta property="og:description" content="Play UVA 2048. "/>
-  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
+  <meta property="og:image" content="meta/og_image.png"/>
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
