--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="above-game">
       <p class="game-intro">
       <a class="restart-button">new game</a>
-      use the arrow keys to slide  tiles. combine similar tiles to create new ones.</p>
+      use the arrow keys or your fingers to slide  tiles. combine similar tiles to create new ones.</p>
       
     </div>
 
